syntax = "proto3";
package example;

import "google/api/annotations.proto";

service Summator {
	rpc Sum(SumRequest) returns (SumResponse) {
		option (google.api.http) = {
			post: "/v1/example/sum"
      body: "*"
		};
  }
  rpc Wait(WaitRequest) returns (WaitResponse) {
		option (google.api.http) = {
			post: "/v1/example/wait"
      body: "*"
		};
  }
  rpc Hello(StrMessage) returns (StrMessage) {
		option (google.api.http) = {
			post: "/v1/example/hello"
      body: "*"
		};
  }
}

// SumRequest is a request for Summator service.
message SumRequest {
  // A is the number we're adding to. Can't be zero for the sake of example.
  int64 a = 1;
  // B is the number we're adding.
  int64 b = 2;
}

message SumResponse {
        int64 sum = 1;
        string error = 2;
}

// WaitRequest is only for test
message WaitRequest {
  string name = 1;
}

message WaitResponse {
  string error = 1;
}

message StrMessage {
   string value = 1;
 }